--- a/95CodeQuality/cpp/CMakeLists.txt
+++ b/95CodeQuality/cpp/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 
 add_executable(awful awful.cc)
 
-include_directories(${CMAKE_SOURCE_DIR}/88cpplibraries/cpp/Eigen/eigen-3.3.7)
+include_directories(../..//88cpplibraries/cpp/Eigen/eigen-3.3.7)
 
 add_executable(less_bad less_bad.cc)
 add_executable(micro_benchmark micro_benchmark.cc)
